--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,54 @@
 alembic==1.0.0
-
-astroid==2.0.4
-
+asn1crypto==0.24.0
+astroid==1.6.5
+backports.functools-lru-cache==1.5
 blinker==1.4
-
-click==6.7
-
-dominate==2.3.1
-
+Click==7.0
+colorama==0.3.7
+configparser==3.5.0
+cryptography==2.1.4
+dominate==2.3.4
+duplicity==0.7.17
+enum34==1.1.6
+fasteners==0.12.0
 Flask==1.0.2
-
 Flask-Bootstrap==3.3.7.1
-
-Flask-Bootstrap4==4.0.2
-
 Flask-Login==0.4.1
-
 Flask-Mail==0.9.1
-
 Flask-Migrate==2.2.1
-
 Flask-Script==2.0.6
-
-Flask-SimpleMDE==0.3.0
-
 Flask-SQLAlchemy==2.3.2
-
 Flask-Uploads==0.2.1
-
-Flask-WTF==0.14.2
-
-gunicorn==19.9.0
-
+futures==3.2.0
+idna==2.6
+ipaddress==1.0.17
 isort==4.3.4
-
 itsdangerous==0.24
-
 Jinja2==2.10
-
+keyring==10.6.0
+keyrings.alt==3.0
 lazy-object-proxy==1.3.1
-
+lockfile==0.12.2
 Mako==1.0.7
-
 MarkupSafe==1.0
-
 mccabe==0.6.1
-
+monotonic==1.0
 psycopg2==2.7.5
-
-psycopg2-binary==2.7.5
-
-pylint==2.1.1
-
+pycrypto==2.6.1
+pygobject==3.26.1
+pyinotify==0.9.6
+pylint==1.9.3
+pyOpenSSL==17.5.0
+pyperclip==1.6.0
 python-dateutil==2.7.3
-
 python-editor==1.0.3
-
+pywatchman==1.3.0
+pyxdg==0.25
+SecretStorage==2.3.1
+simplejson==3.13.2
+singledispatch==3.4.0.3
 six==1.11.0
-
-SQLAlchemy==1.2.11
-
-typed-ast==1.1.0
-
+SQLAlchemy==1.2.12
 visitor==0.1.3
-
 Werkzeug==0.14.1
-
 wrapt==1.10.11
-
-WTForms==2.2.1
